Unneccary classes removed

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <div class="about-header-content container text-white">
+        <div class="header-content container text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-12 col-lg-6'>
@@ -117,22 +117,27 @@
         </div>
     </section>
     <!-- Section solutions end  -->
-    <!-- Section Review start -->
-    <section class="section-review bg-orange px-4 px-lg-0">
+
+    <!-- Section Feedback start -->
+    <section class="section-feedback px-4 px-lg-0 bg-orange">
         <div class="container">
-            <div class="fw-bold text-white d-flex align-items-top mb-4">
+            <div class="fw-bold text-white d-flex align-items-top mb-4 lh-1">
                 <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
                 <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
-                <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
+                <h2 class="section-review-heading fw-bold ms-lg-2 ">
                     GS ynderstood our challenges
                     straight away<span class="right-quote">&#8221;</span>
                 </h2>
             </div>
             <p class="text-blue mb-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
-                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
-                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
-                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur
+                enim ut
+                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit
+                blanditiis
+                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam
+                perspiciatis sit?
+                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo
+                error
                 deleniti! Lorem ipsum dolor
             </p>
             <div class="d-flex mb-3">
@@ -145,14 +150,13 @@
             <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
         </div>
     </section>
-    <!-- Section Review end -->
+    <!-- Section Feedback end -->
 
-    <!-- Section Contact start -->
-    <!-- Section Contact start -->
-    <section class="section-contact px-4 px-lg-0">
+    <!-- Section Call to action start -->
+    <section class="section-call-to-action px-4 px-lg-0">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 d-none d-lg-block">
+                <div class="col-md-7 d-none d-lg-block">
                     <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
@@ -161,7 +165,7 @@
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
                     </h3>
                 </div>
-                <div class="col-lg-7 d-block d-lg-none">
+                <div class="col-md-7 d-block d-lg-none">
                     <h3 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
@@ -173,49 +177,56 @@
             </div>
         </div>
     </section>
-    <!-- Section Contact end -->
+    <!-- Section Call to action end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-4 px-lg-0">
+    <footer class="section-footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                    <a href="#" class="text-white text-decoration-none d-block phone-link">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
-                        <img src="./assets/Icon images/Email_icon.png" alt="email" class="email-icon">
+                    <a href="#" class="text-white text-decoration-none d-block email-link">
+                        <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-2 fw-light">Address line 1</p>
-                    <p class="text-white mb-2 fw-light">Address line 2</p>
-                    <p class="text-white mb-0 fw-light">Address line 3</p>
+                    <p class="text-white mb-2">Address line 1</p>
+                    <p class="text-white mb-2">Address line 2</p>
+                    <p class="text-white mb-0">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block">Link 1</a>
+                    <a href="team.html" class="text-decoration-none text-white d-block">Team</a>
+                    <a href="whyus.html" class="text-decoration-none text-white d-block">Why Us</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-4">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-1 mb-lg-4">
                         services
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Systems
-                        integration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Bespoke
-                        applications</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Consulting</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Data migration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0">Application
-                        refactoring</a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Systems integration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Bespoke applications
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Consulting
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Data migration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0">
+                        Application refactoring
+                    </a>
                 </div>
             </div>
         </div>
@@ -223,24 +234,21 @@
     </footer>
     <!-- Footer end -->
 
-    <!-- Section Copyright start -->
-    <div class="footer-copyright px-3 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+    <!-- Section Legal start -->
+    <div class="section-legal px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
-                    <div class="d-flex flex-column align-items-center flex-lg-row justify-content-between text-center">
+                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
                             <a href="#"
@@ -252,7 +260,7 @@
             </div>
         </div>
     </div>
-    <!-- Section Copyright end -->
+    <!-- Section Legal end -->
 
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
