--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
             </div>
         </nav>
 
-        <div class="home-header-content text-white">
+        <div class="header-content text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-12 col-md-6'>
@@ -100,8 +100,8 @@
         </div>
     </section>
     <!-- Section Header end  -->
-    <!-- Section Problem Solver start  -->
-    <section class="section-problem-solver px-4 px-lg-0">
+    <!-- Section Basic start  -->
+    <section class="section-basic px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 text-left pe-lg-0 mb-4">
@@ -146,14 +146,14 @@
             </div>
         </div>
     </section>
-    <!-- Section Problem Solver end  -->
-    <!-- Section Review start -->
-    <section class="section-review px-4 px-lg-0 bg-orange">
+    <!-- Section Basic end  -->
+    <!-- Section Feedback start -->
+    <section class="section-feedback px-4 px-lg-0 bg-orange">
         <div class="container">
-            <div class="fw-bold text-white d-flex align-items-top mb-4">
+            <div class="fw-bold text-white d-flex align-items-top mb-4 lh-1">
                 <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
                 <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
-                <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
+                <h2 class="section-review-heading fw-bold ms-lg-2 ">
                     GS ynderstood our challenges
                     straight away<span class="right-quote">&#8221;</span>
                 </h2>
@@ -179,10 +179,10 @@
             <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
         </div>
     </section>
-    <!-- Section Review end -->
+    <!-- Section Feedback end -->
 
-    <!-- Section Why us start  -->
-    <section class="section-whyus px-4 px-lg-0 bg-light-grey">
+    <!-- Section Inverted-basic start  -->
+    <section class="section-inverted-basic px-4 px-lg-0 bg-light-grey">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 text-left mb-3 mb-md-0 pe-lg-0">
@@ -217,14 +217,15 @@
             </div>
         </div>
     </section>
-    <!-- Section Why us end -->
+    <!-- Section Inverted-basic end -->
 
-    <!-- Section Geidans-help start -->
-    <section class="section-help px-4 px-lg-0">
+    <!-- Section Icons List start -->
+    <section class="section-icons-list px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 mx-auto">
-                    <h2 class="section-help-title text-orange text-center text-lg-start fw-bold mb-5">How we can help
+                    <h2 class="section-icons-list-title text-orange text-center text-lg-start fw-bold mb-5">How we can
+                        help
                     </h2>
                 </div>
             </div>
@@ -232,7 +233,7 @@
                 <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
                     <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
+                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
                             Getting your software systems to talk each other
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -247,7 +248,7 @@
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Building_icon.png" alt="systems-icon">
                     <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
+                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
                             Building software that suits your business
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -261,8 +262,9 @@
             <div class="row mb-4 mb-md-5">
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Move_icon.png" alt="systems-icon">
-                    <div class="section-help-detail text-center text-md-start ">
-                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">What you need to
+                    <div class="text-center text-md-start ">
+                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">What you need
+                            to
                             move your data</h2>
                         <p class="text-blue d-none d-md-block mb-3">
                             we have 20 years' experience in shifting data safely
@@ -275,9 +277,8 @@
             <div class="row">
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Upgrade_icon.png" alt="systems-icon">
-                    <div class="section-help-detail">
-                        <h2
-                            class="fw-bolder section-help-heading lh-1 text-blue text-center text-md-start mt-2 mt-lg-0">
+                    <div class="text-center text-md-start">
+                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue  mt-2 mt-lg-0">
                             Making current software good as new
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -290,11 +291,11 @@
             </div>
         </div>
     </section>
-    <!-- Section Geidans-help end -->
+    <!-- Section Icons List end -->
 
 
-    <!-- Section Solutions start  -->
-    <section class="section-solution px-4 px-lg-0">
+    <!-- Section Highlighted start  -->
+    <section class="section-highlighted px-4 px-lg-0">
         <div class="container">
             <div class="row d-none d-md-flex">
                 <div class="col-12 col-lg-4 d-flex flex-row flex-lg-column mb-5 mb-lg-0">
@@ -346,10 +347,10 @@
 
         </div>
     </section>
-    <!-- Section Solutions end -->
+    <!-- Section Highlighted end -->
 
-    <!-- Section Contact start -->
-    <section class="section-contact px-4 px-lg-0">
+    <!-- Section Call to action start -->
+    <section class="section-call-to-action px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
@@ -373,49 +374,56 @@
             </div>
         </div>
     </section>
-    <!-- Section Contact end -->
+    <!-- Section Call to action end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-4 px-lg-0">
+    <footer class="section-footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                    <a href="#" class="text-white text-decoration-none d-block phone-link">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                    <a href="#" class="text-white text-decoration-none d-block email-link">
                         <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-2 fw-light">Address line 1</p>
-                    <p class="text-white mb-2 fw-light">Address line 2</p>
-                    <p class="text-white mb-0 fw-light">Address line 3</p>
+                    <p class="text-white mb-2">Address line 1</p>
+                    <p class="text-white mb-2">Address line 2</p>
+                    <p class="text-white mb-0">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block">Link 1</a>
+                    <a href="team.html" class="text-decoration-none text-white d-block">Team</a>
+                    <a href="whyus.html" class="text-decoration-none text-white d-block">Why Us</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-4">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-1 mb-lg-4">
                         services
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Systems
-                        integration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Bespoke
-                        applications</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Consulting</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Data migration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0">Application
-                        refactoring</a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Systems integration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Bespoke applications
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Consulting
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Data migration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0">
+                        Application refactoring
+                    </a>
                 </div>
             </div>
         </div>
@@ -423,24 +431,21 @@
     </footer>
     <!-- Footer end -->
 
-    <!-- Section Copyright start -->
-    <div class="footer-copyright px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+    <!-- Section Legal start -->
+    <div class="section-legal px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
                             <a href="#"
@@ -452,7 +457,7 @@
             </div>
         </div>
     </div>
-    <!-- Section Copyright end -->
+    <!-- Section Legal end -->
 
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
