--- a/whatwedo.html
+++ b/whatwedo.html
@@ -69,7 +69,7 @@
             </div>
         </nav>
 
-        <div class="whatwedo-header-content text-white">
+        <div class="header-content">
             <div class="container">
                 <div class="row">
                     <div class='col-md-6'>
@@ -85,8 +85,7 @@
         </div>
     </section>
     <!-- Section Header end  -->
-    <!-- Section details start  -->
-    <section class="whatwedo-section-1 px-4 px-lg-0">
+    <section class="section-basic px-4 px-lg-0">
         <div class="container mb-4">
             <div class="row ">
                 <div class="col-12 col-lg-5">
@@ -115,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="container d-none d-lg-block">
+        <div class="section-icons container d-none d-lg-block">
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="card rounded-0">
@@ -156,7 +155,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-2 bg-light-grey px-4 px-lg-0">
+    <section class="section-inverted-basic bg-light-grey px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -188,7 +187,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-3 px-4 px-lg-0">
+    <section class="section-basic px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -215,7 +214,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-4 bg-light-grey px-4 px-lg-0">
+    <section class="section-inverted-basic bg-light-grey px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -251,7 +250,7 @@
             </div>
         </div>
     </section>
-    <section class="whatwedo-section-5 px-4 px-lg-0">
+    <section class="section-basic px-4 px-lg-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
@@ -286,10 +285,9 @@
             </div>
         </div>
     </section>
-    <!-- Section details end  -->
 
-    <!-- Section Contact start -->
-    <section class="section-contact px-4 px-lg-0">
+    <!-- Section Call to Action start -->
+    <section class="section-call-to-action px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
@@ -313,49 +311,56 @@
             </div>
         </div>
     </section>
-    <!-- Section Contact end -->
+    <!-- Section Call to Action end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-4 px-lg-0">
+    <footer class="section-footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                    <a href="#" class="text-white text-decoration-none d-block phone-link">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                    <a href="#" class="text-white text-decoration-none d-block email-link">
                         <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-2 fw-light">Address line 1</p>
-                    <p class="text-white mb-2 fw-light">Address line 2</p>
-                    <p class="text-white mb-0 fw-light">Address line 3</p>
+                    <p class="text-white mb-2">Address line 1</p>
+                    <p class="text-white mb-2">Address line 2</p>
+                    <p class="text-white mb-0">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
                     <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block">Link 1</a>
+                    <a href="team.html" class="text-decoration-none text-white d-block">Team</a>
+                    <a href="whyus.html" class="text-decoration-none text-white d-block">Why Us</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-4">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-1 mb-lg-4">
                         services
                     </h5>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Systems
-                        integration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Bespoke
-                        applications</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Consulting</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Data migration</a>
-                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0">Application
-                        refactoring</a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Systems integration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Bespoke applications
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Consulting
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Data migration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0">
+                        Application refactoring
+                    </a>
                 </div>
             </div>
         </div>
@@ -363,24 +368,21 @@
     </footer>
     <!-- Footer end -->
 
-    <!-- Section Copyright start -->
-    <div class="footer-copyright px-3 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+    <!-- Section Legal start -->
+    <div class="section-legal px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
                             <a href="#"
@@ -392,7 +394,7 @@
             </div>
         </div>
     </div>
-    <!-- Section Copyright end -->
+    <!-- Section Legal end -->
 
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
