--- a/whyus.html
+++ b/whyus.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <div class="whyus-header-content text-white pt-3">
+        <div class="header-content text-white pt-3">
             <div class="container">
                 <div class="row">
                     <div class='col-md-6'>
@@ -88,7 +88,7 @@
     <!-- Section Header end  -->
 
     <!-- Section details start  -->
-    <section class="px-4 px-lg-0 whyus-section-main">
+    <section class="px-4 px-lg-0 section-split">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
@@ -134,7 +134,8 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-4 bg-orange ">
-                    <section class="section-review pt-4 mb-0 d-none d-lg-block">
+
+                    <section class="section-feedback pt-4 mb-0 d-none d-lg-block">
                         <div class="fw-bold text-white d-flex flex-lg-column align-items-top mb-4">
                             <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
                             <img src="./assets/Icon images/“.png" alt="quote" class="img-quote d-none d-lg-block mb-3">
@@ -162,41 +163,13 @@
                             <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
                         </div>
                         <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
+                    </section>
                 </div>
-    </section>
-    <section class="section-review px-4 px-lg-0 bg-orange d-lg-none">
-        <div class="container">
-            <div class="fw-bold text-white d-flex align-items-top mb-4">
-                <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
-                <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
-                <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
-                    GS ynderstood our challenges
-                    straight away<span class="right-quote">&#8221;</span>
-                </h2>
             </div>
-            <p class="text-blue mb-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
-                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
-                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
-                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
-                deleniti! Lorem ipsum dolor
-            </p>
-            <div class="d-flex mb-3">
-                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
-                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
-                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
-                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
-                <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
-            </div>
-            <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
-        </div>
     </section>
-    </section>
-    <!-- Section details start  -->
 
-
-    <!-- Section Contact start -->
-    <section class="section-contact px-4 px-lg-0">
+    <!-- Section Call to action start -->
+    <section class="section-call-to-action px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
@@ -220,46 +193,56 @@
             </div>
         </div>
     </section>
-    <!-- Section Contact end -->
+    <!-- Section Call to action end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-4 px-3 px-lg-0">
+    <footer class="section-footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                    <a href="#" class="text-white text-decoration-none d-block phone-link">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                    <a href="#" class="text-white text-decoration-none d-block email-link">
                         <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-0">Address line 1</p>
-                    <p class="text-white mb-0">Address line 2</p>
+                    <p class="text-white mb-2">Address line 1</p>
+                    <p class="text-white mb-2">Address line 2</p>
                     <p class="text-white mb-0">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="team.html" class="text-decoration-none text-white d-block">Team</a>
+                    <a href="whyus.html" class="text-decoration-none text-white d-block">Why Us</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-1 mb-lg-4">
                         services
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Systems integration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Bespoke applications</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Consulting</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Data migration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Application refactoring</a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Systems integration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Bespoke applications
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Consulting
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block">
+                        Data migration
+                    </a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0">
+                        Application refactoring
+                    </a>
                 </div>
             </div>
         </div>
@@ -267,24 +250,21 @@
     </footer>
     <!-- Footer end -->
 
-    <!-- Section Copyright start -->
-    <div class="footer-copyright px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+    <!-- Section Legal start -->
+    <div class="section-legal px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#"
-                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
+                            <a href="#" class="link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
                             <a href="#"
@@ -296,7 +276,7 @@
             </div>
         </div>
     </div>
-    <!-- Section Copyright end -->
+    <!-- Section Legal end -->
 
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
